--- a/netlify.toml
+++ b/netlify.toml
@@ -1,24 +1,36 @@
 [build]
 publish = "."
 
-[[redirects]]
-from = "/*"
-to = "/index.html"
-status = 200
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000"
+    X-Frame-Options = "DENY"
+    X-XSS-Protection = "1; mode=block"
+
+[[headers]]
+  for = "/*.css"
+  [headers.values]
+    Content-Type = "text/css"
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Content-Type = "text/javascript"
 
 [build.processing]
-skip_processing = false
-
+  skip_processing = false
+  
 [build.processing.css]
-bundle = true
-minify = true
+  bundle = true
+  minify = true
 
 [build.processing.js]
-bundle = true
-minify = true
+  bundle = true
+  minify = true
 
 [build.processing.html]
-pretty_urls = true
+  pretty_urls = true
 
 [build.processing.images]
-compress = true
+  compress = true
